fix: artifact name

--- a/.github/workflows/build_ubuntu_release.yml
+++ b/.github/workflows/build_ubuntu_release.yml
@@ -12,5 +12,5 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: plum
+        name: plum.tar.gz
         path: plum.tar.gz
