feat: added auto release publish and added Dockerfile

--- a/.github/workflows/build_ubuntu_release.yml
+++ b/.github/workflows/build_ubuntu_release.yml
@@ -9,8 +9,26 @@ jobs:
     - uses: actions/checkout@v4
     - name: Setup Release
       run: ./setup_release.sh
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v2
+
+    # Step to create a release
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: plum.tar.gz
-        path: plum.tar.gz
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+
+    # Step to upload a release asset
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./plum.tar.gz
+        asset_name: plum.tar.gz
+        asset_content_type: application/gzip
