--- a/.github/workflows/build_ubuntu_release.yml
+++ b/.github/workflows/build_ubuntu_release.yml
@@ -9,7 +9,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Setup Release
       run: ./setup_release.sh
-
+    - name: Get Version
+      id: get_version
+      run: echo ::set-output name=version::$(cat VERSION)
     # Step to create a release
     - name: Create Release
       id: create_release
