--- a/.github/workflows/build_ubuntu_release.yml
+++ b/.github/workflows/build_ubuntu_release.yml
@@ -14,7 +14,7 @@ jobs:
       run: ./setup_release.sh
     - name: Get Version
       id: get_version
-      run: echo version=$(cat VERSION) >> $GITHUB_OUTPUT
+      run: echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
     - name: Extract branch name
       run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
     # Step to create a release
@@ -24,8 +24,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ env.BRANCH_NAME }}-${{ github.run_number }}-${{ github.sha }}
-        release_name: Release ${{ env.BRANCH_NAME }}-${{ github.run_number }}-${{ github.sha }}
+        tag_name: ${{ env.VERSION }}-${{ env.BRANCH_NAME }}-${{ github.sha }}
+        release_name: Release ${{ env.VERSION }}-${{ env.BRANCH_NAME }}-${{ github.sha }}
         draft: false
         prerelease: false
 
