feat: Updated CI

--- a/.github/workflows/build_ubuntu_release.yml
+++ b/.github/workflows/build_ubuntu_release.yml
@@ -19,6 +19,12 @@ jobs:
       packages: write
     steps:
     - uses: actions/checkout@v4
+    - name: Install Go
+      run: | 
+        wget "https://go.dev/dl/go1.22.5.linux-amd64.tar.gz"
+        tar -C /usr/local -xzf "go1.22.5.linux-amd64.tar.gz"
+        rm -f "go1.22.5.linux-amd64.tar.gz"
+        export PATH="$PATH:/usr/local/go/bin"
     - name: Setup Release
       run: ./setup_release.sh
     - name: Get Version
