fix: Removed old files and fixed CI

--- a/.github/workflows/build_ubuntu_release.yml
+++ b/.github/workflows/build_ubuntu_release.yml
@@ -22,14 +22,14 @@ jobs:
     - name: Install Go
       run: | 
         wget "https://go.dev/dl/go1.22.5.linux-amd64.tar.gz"
-        tar -C /usr/local -xzf "go1.22.5.linux-amd64.tar.gz"
-        rm -f "go1.22.5.linux-amd64.tar.gz"
+        sudo tar -C /usr/local -xzf "go1.22.5.linux-amd64.tar.gz"
+        sudo rm -f "go1.22.5.linux-amd64.tar.gz"
         export PATH="$PATH:/usr/local/go/bin"
     - name: Setup Release
       run: ./setup_release.sh
     - name: Get Version
       id: get_version
-      run: echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
+      run: echo "VERSION=$(plum --version)" >> $GITHUB_ENV
     - name: Extract branch name
       run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
     # Step to create a release
